fix logger bug, fix path interpolation in dataservwrapper, wire up dataservclient to ui again

--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -96,7 +96,7 @@
               <section class="action">
                 <div class="row">
                   <div class="col-xs-12">
-                    <button class="btn btn-block ladda-button start" disabled="true" data-style="expand-left">
+                    <button class="btn btn-block ladda-button" data-style="expand-left" v-on:click="startFarming">
                       <span class="start-label">START</span>
                     </button>
                   </div>
