wire up installer to gui - needs testing on osx and win32

--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -126,16 +126,28 @@
     </div>
   </div>
 
-  <div class="modal fade text-center" id="modalSetup" tabindex="-1" role="dialog" aria-labelledby="modalSetup">
+  <div class="modal fade text-center" id="setup" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title">Welcome to DriveShare</h4>
+          <h4 class="modal-title">{{title}}</h4>
         </div>
         <div class="modal-body">
-          <p>Performing first time initialization, please wait...</p>
-          <p id="setupStatus"><!--Contents are populated by ./modules/setup.js--></p>
-          <div class="spinner spinner-modal">
+          <p v-if="working">Performing first time initialization, please wait...</p>
+          <p v-if="working">{{status}}</p>
+          <p v-if="linux">Your password is required for first time setup, please input your user password:</p>
+          <div v-if="linux" class="row">
+            <div class="col-lg-4 col-lg-offset-4">
+              <div class="input-group">
+                <input class="form-control input-lg" type="password" placeholder="Password" autofocus v-model="password">
+              </div>
+              <br>
+              <div class="btn-group">
+                <button type="button" class="btn btn-blue" v-on:click="setup">Submit</button>
+              </div>
+            </div>
+          </div>
+          <div v-if="working" class="spinner spinner-modal">
             <div class="rect1"></div>
             <div class="rect2"></div>
             <div class="rect3"></div>
@@ -143,113 +155,9 @@
             <div class="rect5"></div>
           </div>
         </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="modal fade text-center" id="modalSetupError" tabindex="-1" role="dialog" aria-labelledby="modalSetupError">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title">Download Error</h4>
-        </div>
-        <div class="modal-body">There was an issue downloading dataserv-client, please try again. If this issue persists, try running the program as an administrator, or <a href="https://github.com/Storj/driveshare-gui/issues" class="js-external-link">post an issue on github</a>.</div>
-        <div class="modal-footer">
+        <div v-if="error" class="modal-footer">
           <div class="btn-group">
-            <button type="button" class="btn btn-blue" data-dismiss="modal" onclick="location.reload();">Reload</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="modal fade text-center" id="modalSetupLinux" tabindex="-1" role="dialog" aria-labelledby="modalSetup">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title">Welcome to DriveShare</h4>
-        </div>
-
-        <div class="modal-body">
-          <p>Your password is required for first time setup, please input your user password:</p>
-          <div class="row">
-            <div class="col-lg-4 col-lg-offset-4">
-              <div class="input-group">
-                <input id="linuxPassword" class="form-control input-lg" type="password" placeholder="Password" autofocus>
-              </div>
-              <br>
-              <div class="btn-group">
-                <button type="button" class="btn btn-blue" onclick="require('./modules/setup').setupLinux();">Submit</button>
-              </div>
-            </div><!-- /.col-lg-4 -->
-          </div><!-- /.row -->
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="modal fade text-center" id="modalSetupErrorLinux" tabindex="-1" role="dialog" aria-labelledby="modalSetupError">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title">Setup Error</h4>
-        </div>
-        <div class="modal-body">There was an issue installing dataserv-client, please ensure you have <a href="https://www.python.org/downloads/" class="js-external-link">Python</a> installed and try again. If the issue persists let us know on <a href="https://github.com/Storj/driveshare-gui/issues" class="js-external-link">github</a>.</div>
-        <div class="modal-footer">
-          <div class="btn-group">
-            <button type="button" class="btn btn-blue" data-dismiss="modal" onclick="location.reload();">Reload</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="modal fade text-center" id="modalValidateError" tabindex="-1" role="dialog" aria-labelledby="modalSetup">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title">Error</h4>
-        </div>
-        <div class="modal-body">There was an issue running dataserv-client, please let us know on <a href="https://github.com/Storj/driveshare-gui/issues" class="js-external-link">github</a>.</div>
-        <div class="modal-footer">
-          <div class="btn-group">
-            <button type="button" class="btn btn-blue" data-dismiss="modal" onclick="location.reload();">Reload</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="modal fade text-center" id="modalValidateErrorWindows" tabindex="-1" role="dialog" aria-labelledby="modalSetup">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title">Error</h4>
-        </div>
-        <div class="modal-body">There was an issue running dataserv-client, make sure you have <a href="http://www.microsoft.com/net" class="js-external-link">Microsoft .NET Framework</a> installed and try again. If the issue persists let us know on <a href="https://github.com/Storj/driveshare-gui/issues" class="js-external-link">github</a>.</div>
-        <div class="modal-footer">
-          <div class="btn-group">
-            <button type="button" class="btn btn-blue" data-dismiss="modal" onclick="location.reload();">Reload</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="modal fade text-center" id="modalSetupUnsupported" tabindex="-1" role="dialog" aria-labelledby="modalSetupUnsupported">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title">Please Install dataserv-client</h4>
-        </div>
-        <div class="modal-body">
-          <p>Automatic setup of <strong>dataserv-client</strong> is not yet supported on this platform.</p>
-          <p>Please <a href="http://driveshare.org/dataserv.html" class="js-external-link">follow the instructions on this page</a> to install <strong>dataserv-client</strong>.</p>
-          <p>Reload DriveShare when installation is complete.</p>
-        </div>
-        <div class="modal-footer">
-          <div class="btn-group">
-            <button type="button" class="btn btn-blue" data-dismiss="modal" onclick="location.reload();">Reload</button>
+            <button type="button" class="btn btn-blue" data-dismiss="modal" v-on:click="">Reload</button>
           </div>
         </div>
       </div>
