--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -207,10 +207,10 @@
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
-          <h4 class="modal-title">Console Logs</h4>
+          <h4 class="modal-title">Debugging Console</h4>
         </div>
         <div class="modal-body">
-          <pre class="pre-scrollable text-left">{{output}}</pre>
+          <pre class="pre-scrollable text-left" id="logoutput">{{output}}</pre>
         </div>
       </div>
     </div>
