add free space indicator

--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -62,7 +62,7 @@
                   <div class="form-group col-xs-12">
                     <label class="control-label" for="location">Storage Location</label>
                     <div class="pull-right">
-                        <span id="drive-space"></span>
+                        <span id="drive-space">{{freespace}}</span>
                     </div>
                     <div class="row">
                       <div class="col-xs-8">
