--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -50,12 +50,11 @@
                       <label class="control-label" for="address">Payout Address</label>
                       <div class="pull-right">
                         <span class="amount">
-                          <a class="js-external-link" href="https://counterwallet.io/">
-                            Create New Address
-                          </a>
+                          <a v-if="!balance.qualified" class="js-external-link" href="https://counterwallet.io/">Create New Address</a>
+                          <p v-if="balance.qualified">Balance: {{balance.sjcx}} SJCX, {{balance.sjct}} SJCT</p>
                         </span>
                       </div>
-                      <input class="form-control address input-address" v-bind:disabled="running[current]" data-error="Payout address is required" id="address" name="address" placeholder="Enter your SJCX Address" required="" type="text", v-model="userdata.tabs[current].address">
+                      <input class="form-control address input-address" v-on:change="getBalance" v-bind:disabled="running[current]" data-error="Payout address is required" id="address" name="address" placeholder="Enter your SJCX Address" required="" type="text", v-model="userdata.tabs[current].address">
                   </div>
                 </div>
                 <div class="row">
