--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -101,7 +101,7 @@
                       <span class="start-label">PREPARING...</span>
                     </button>
                     <button v-if="running[current]" class="btn btn-block ladda-button stop" data-style="expand-left" v-on:click="stopFarming">
-                      <span class="start-label">RUNNING, CLICK TO ABORT</span>
+                      <span class="start-label">DRIVESHARE IS RUNNING</span>
                     </button>
                   </div>
                 </div>
