fix storage unit size in UI - clse #84

--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -83,7 +83,7 @@
                       <div class="col-xs-4">
                       	<select class="form-control size-unit" v-model="userdata.tabs[current].storage.unit" v-bind:disabled="running[current]">
                           <option>MB</option>
-                          <option selected>GB</option>
+                          <option>GB</option>
                           <option>TB</option>
                         </select>
                       </div>
