fix error messaging on linux setup

--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -136,7 +136,8 @@
         <div class="modal-body">
           <p v-if="working">Performing first time initialization, please wait...</p>
           <p v-if="working">{{status}}</p>
-          <p v-if="linux">Your password is required for first time setup, please input your user password:</p>
+          <p v-if="!working && error" class="error">{{error}}</p>
+          <p v-if="linux && !working">Your password is required for first time setup, please input your user password:</p>
           <form v-if="linux && !working" class="row" v-on:submit="setup">
             <div class="col-lg-4 col-lg-offset-4">
               <div class="input-group passwd-linux">
