apt-get command fix

--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -159,7 +159,7 @@
         </div>
         <div v-if="error" class="modal-footer">
           <div class="btn-group">
-            <button type="button" class="btn btn-blue" data-dismiss="modal" v-on:click="reload">Reload</button>
+            <button type="button" class="btn btn-blue" data-dismiss="modal" v-on:click="reload">Try Again</button>
           </div>
         </div>
       </div>
